# fastsite

./: .gitignore  .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
search/: search_index.json
