[tool.poetry]
name = "fastsite"
version = "0.1.0"
description = "fastapi website"
authors = ["x_zhuo"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
uvicorn = "^0.11.5"
psycopg2-binary = "^2.8.5"
mkdocs = {version = "^1.1.2", extras = ["docs"]}
mkdocs-material = {version = "^5.4.0", extras = ["docs"]}
mkdocs-git-revision-date-localized-plugin = {version = "^0.6", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
